--- a/project-detail.html
+++ b/project-detail.html
@@ -48,23 +48,6 @@ https://templatemo.com/tm-538-digital-trend
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a href="index.html#about" class="nav-link">Studio</a>
-            </li>
-            <li class="nav-item">
-              <a href="index.html#project" class="nav-link">Our Works</a>
-            </li>
-            <li class="nav-item">
-              <a href="blog.html" class="nav-link">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a href="contact.html" class="nav-link contact">Contact</a>
-            </li>
-          </ul>
-        </div>
       </div>
     </nav>
 
@@ -278,11 +261,40 @@ https://templatemo.com/tm-538-digital-trend
                 alt="male avatar"
               />
 
-              <p>Angelo Sharp, Creative Director</p>
             </div>
           </div>
         </div>
       </div>
+
+      <!--Videos-->
+      <video controls autoplay>
+        <source src="movie.mp4" type="video/mp4">
+        <source src="movie.ogg" type="video/ogg">
+        Your browser does not support the video tag.
+      </video> 
+
+
+      <video controls autoplay>
+        <source src="movie.mp4" type="video/mp4">
+        <source src="movie.ogg" type="video/ogg">
+        Your browser does not support the video tag.
+      </video> 
+
+
+      <video controls autoplay>
+        <source src="movie.mp4" type="video/mp4">
+        <source src="movie.ogg" type="video/ogg">
+        Your browser does not support the video tag.
+      </video> 
+
+
+      <video controls autoplay>
+        <source src="movie.mp4" type="video/mp4">
+        <source src="movie.ogg" type="video/ogg">
+        Your browser does not support the video tag.
+      </video> 
+
+
     </section>
 
     <!-- SCRIPTS -->
