--- a/project-detail.html
+++ b/project-detail.html
@@ -268,29 +268,25 @@ https://templatemo.com/tm-538-digital-trend
 
       <!--Videos-->
       <video controls autoplay>
-        <source src="movie.mp4" type="video/mp4">
-        <source src="movie.ogg" type="video/ogg">
+        <source src="videos/video.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video> 
 
 
       <video controls autoplay>
-        <source src="movie.mp4" type="video/mp4">
-        <source src="movie.ogg" type="video/ogg">
+        <source src="videos/video(1).mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video> 
 
 
       <video controls autoplay>
-        <source src="movie.mp4" type="video/mp4">
-        <source src="movie.ogg" type="video/ogg">
+        <source src="videos/video(2).mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video> 
 
 
       <video controls autoplay>
-        <source src="movie.mp4" type="video/mp4">
-        <source src="movie.ogg" type="video/ogg">
+        <source src="videos/Pexels Videos 1085656.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video> 
 
